Update Slurm version to 22-05-2-1 during installation.
- Merge branch 'feature/0' into dev

--- a/docker/slurm/files/slurm.conf
+++ b/docker/slurm/files/slurm.conf
@@ -60,6 +60,8 @@ NodeName=c4 NodeAddr=127.0.0.1 RealMemory=1000 Gres=gpu:titanxp:1
 #OverTimeLimit=0
 PartitionName=debug Nodes=c[3-4] Priority=50 DefMemPerCPU=500 Shared=NO MaxNodes=2 MaxTime=5-00:00:00 DefaultTime=5-00:00:00 State=UP
 PartitionName=normal Default=yes Nodes=c[1-2] Priority=50 DefMemPerCPU=500 Shared=NO MaxNodes=2 MaxTime=5-00:00:00 DefaultTime=5-00:00:00 State=UP
+
+# PartitionName=debug Nodes=ALL Default=YES MaxTime=INFINITE State=UP Shared=FORCE:1 MaxNodes=4
 # PARTITIONS
 #PluginDir=
 #PlugStackConfig=
