--- a/broker/_slurm/confs/slurm.conf
+++ b/broker/_slurm/confs/slurm.conf
@@ -1,132 +1,32 @@
-# Put this file on all nodes of your cluster.
-# See the slurm.conf man page for more information.
-#
-#
+#AccountingStorageEnforce=0
+#AccountingStorageHost=
+#AccountingStoragePass=
+#AccountingStoragePort=
+AccountingStorageType=accounting_storage/slurmdbd
+#AccountingStorageUser=
+#AccountingStoreFlags=
+#BatchStartTimeout=10
 ClusterName=eblocbroker
-ControlMachine=ocean  # $(hostname -s)
-ControlAddr=127.0.0.1
-SlurmUser=alper
-MailProg=/var/ebloc-broker/slurm_mail_prog.sh
-MinJobAge=172800  # 48 h
-SlurmdSpoolDir=/var/spool/slurmd.%n
-SlurmdLogFile=/var/log/slurm/slurmd.%n.log
-SlurmdPidFile=/var/run/slurmd.%n.pid
-#
-AuthType=auth/munge
-CryptoType=crypto/munge
+#CompleteWait=0
+# COMPUTE NODES
+#DebugFlags=
+#DefMemPerCPU=0
 #DisableRootJobs=NO
 #EnforcePartLimits=NO
 #Epilog=
+#EpilogMsgTime=2000
 #EpilogSlurmctld=
 #FirstJobId=1
-#MaxJobId=999999
+#FrontEndName=slurmctl
+#GetEnvTimeout=2
 #GresTypes=
 #GroupUpdateForce=0
 #GroupUpdateTime=600
-#JobCheckpointDir=/var/slurm/checkpoint
-#JobCredentialPrivateKey=
-#JobCredentialPublicCertificate=
-#JobFileAppend=0
-#JobRequeue=1
-#JobSubmitPlugins=1
-#KillOnBadExit=0
-#LaunchType=launch/slurm
-#Licenses=foo*4,bar
-#MaxJobCount=5000
-#MaxStepCount=40000
-#MaxTasksPerNode=128
-MpiDefault=none
-#MpiParams=ports=#-#
-#PluginDir=
-#PlugStackConfig=
-#PrivateData=jobs
-ProctrackType=proctrack/pgid
-#Prolog=
-#PrologFlags=
-#PrologSlurmctld=
-#PropagatePrioProcess=0
-#PropagateResourceLimits=
-#PropagateResourceLimitsExcept=
-#RebootProgram=
-ReturnToService=1
-#SallocDefaultCommand=
-SlurmctldPidFile=/var/run/slurmctld.pid
-SlurmdPort=6820
-SlurmctldPort=6821
-#SrunEpilog=
-#SrunProlog=
-StateSaveLocation=/tmp/slurmstate
-SwitchType=switch/none
-#TaskEpilog=
-TaskPlugin=task/none
-#TaskPluginParam=
-#TaskProlog=
-#TopologyPlugin=topology/tree
-#TmpFS=/tmp
-#TrackWCKey=no
-#TreeWidth=
-#UnkillableStepProgram=
-#UsePAM=0
-#
-#
-# TIMERS
-#BatchStartTimeout=10
-#CompleteWait=0
-#EpilogMsgTime=2000
-#GetEnvTimeout=2
 #HealthCheckInterval=0
 #HealthCheckProgram=
 InactiveLimit=0
-KillWait=0
-#MessageTimeout=10
-#ResvOverRun=0
-#OverTimeLimit=0
-SlurmctldTimeout=120
-SlurmdTimeout=300
-#UnkillableStepTimeout=60
-#VSizeFactor=0
-Waittime=0
-#
-#
-# SCHEDULING
-#DefMemPerCPU=0
-#FastSchedule=1
-#MaxMemPerCPU=0
-#SchedulerRootFilter=1
-#SchedulerTimeSlice=30
-SchedulerType=sched/backfill
-SelectType=select/linear
-# SchedulerPort=7321
-#SelectTypeParameters=
-#
-#
-# JOB PRIORITY
-#PriorityFlags=
-#PriorityType=priority/basic
-PriorityDecayHalfLife=0
-#PriorityCalcPeriod=
-#PriorityFavorSmall=
-#PriorityMaxAge=
-PriorityUsageResetPeriod=NONE
-#PriorityWeightAge=
-#PriorityWeightFairshare=
-#PriorityWeightJobSize=
-#PriorityWeightPartition=
-#PriorityWeightQOS=
-#
-#
-# LOGGING AND ACCOUNTING
-AccountingStorageEnforce=limits
-#AccountingStorageHost=
-#AccountingStorageLoc=
-#AccountingStoragePass=
-#AccountingStoragePort=
-AccountingStoreJobComment=YES
-AccountingStorageType=accounting_storage/slurmdbd
-
-#AccountingStorageUser=
-#AccountingStoreFlags=YES
-#DebugFlags=
+JobAcctGatherFrequency=30
+JobAcctGatherType=jobacct_gather/linux
 #JobCompHost=
 #JobCompLoc=
 #JobCompPass=
@@ -134,39 +34,114 @@ AccountingStorageType=accounting_storage/slurmdbd
 JobCompType=jobcomp/none
 #JobCompUser=
 #JobContainerType=job_container/none
-JobAcctGatherFrequency=30
-JobAcctGatherType=jobacct_gather/none
-SlurmctldDebug=3
-#SlurmctldLogFile=
-SlurmdDebug=3
-# SlurmdPidFile=/var/run/slurmd.pid
-# SlurmdSpoolDir=/var/spool/slurmd
-#SlurmdLogFile=
+#JobFileAppend=0
+# JOB PRIORITY
+#JobRequeue=1
+#JobSubmitPlugins=lua
+#KillOnBadExit=0
+KillWait=30
+#LaunchType=launch/slurm
+#Licenses=foo*4,bar
+# LOGGING AND ACCOUNTING
+MailProg=/var/ebloc-broker/slurm_mail_prog.sh
+#MaxJobCount=10000
+#MaxJobId=67043328
+#MaxMemPerCPU=0
+#MaxStepCount=40000
+#MaxTasksPerNode=512
+#MessageTimeout=10
+MinJobAge=172800  # 48 h
+MpiDefault=none
+#MpiParams=ports=#-#
+# NodeName=home NodeHostName=localhost CPUs=80 Sockets=2 CoresPerSocket=20 ThreadsPerCore=2 RealMemory=515896 State=UNKNOWN
+#
+NodeName=homevm[1-4] NodeHostName=localhost Port=[6001-6004] NodeAddr=127.0.0.1 CPUs=1 RealMemory=6000
+PartitionName=debug Default=yes Nodes=homevm[1-4]
+
+# NodeName=home[1-2] NodeHostName=localhost NodeAddr=127.0.0.1 RealMemory=1000 CPUs=1
+# PartitionName=debug Nodes=ALL Default=YES MaxTime=INFINITE State=UP MaxNodes=4
+
+# NodeName=home[1-4] NodeHostName=home RealMemory=1000
+# PartitionName=debug Nodes=ALL Default=YES MaxTime=INFINITE State=UP Shared=FORCE:1
+# NodeName=c2 NodeAddr=127.0.0.1 RealMemory=1000
+# NodeName=c3 NodeAddr=127.0.0.1 RealMemory=1000
+# NodeName=c4 NodeAddr=127.0.0.1 RealMemory=1000
+#OverTimeLimit=0
+# PartitionName=debug Nodes=ALL Default=YES MaxTime=INFINITE State=UP Shared=FORCE:1 MaxNodes=1
+# PartitionName=debug Nodes=c[3-4] Priority=50 DefMemPerCPU=500 Shared=NO MaxNodes=2 MaxTime=5-00:00:00 DefaultTime=5-00:00:00 State=UP
+# PartitionName=normal Default=yes Nodes=c[1-2] Priority=50 DefMemPerCPU=500 Shared=NO MaxNodes=2 MaxTime=5-00:00:00 DefaultTime=5-00:00:00 State=UP
+#
+# PARTITIONS
+#PluginDir=
+#PlugStackConfig=
+# POWER SAVE SUPPORT FOR IDLE NODES (optional)
+#PriorityCalcPeriod=
+#PriorityDecayHalfLife=
+#PriorityFavorSmall=
+#PriorityFlags=
+#PriorityMaxAge=
+#PriorityType=priority/basic
+#PriorityUsageResetPeriod=
+#PriorityWeightAge=
+#PriorityWeightFairshare=
+#PriorityWeightJobSize=
+#PriorityWeightPartition=
+#PriorityWeightQOS=
+#PrivateData=jobs
+ProctrackType=proctrack/linuxproc
+#Prolog=
+#PrologFlags=
+#PrologSlurmctld=
+#PropagatePrioProcess=0
+#PropagateResourceLimits=
+#PropagateResourceLimitsExcept=
+#RebootProgram=
+#ResumeProgram=
+#ResumeRate=
+#ResumeTimeout=
+#ResvOverRun=0
+ReturnToService=1
+#SchedulerTimeSlice=30
+SchedulerType=sched/backfill
+# SCHEDULING
+SelectTypeParameters=CR_CPU_Memory
+SelectType=select/cons_tres
+SlurmctldDebug=debug
+SlurmctldHost=homevm
+SlurmctldLogFile=/var/log/slurm/slurmctld.log
+SlurmctldPidFile=/var/run/slurm/slurmctld.pid
+SlurmctldPort=6817
+SlurmctldTimeout=120
+SlurmdDebug=debug
+SlurmdLogFile=/var/log/slurm/slurmd.%n.log
+SlurmdPidFile=/var/run/slurmd.%n.pid
+SlurmdPort=6818
+SlurmdSpoolDir=/var/spool/slurmd.%n
+SlurmdTimeout=300
+#SlurmdUser=root
 #SlurmSchedLogFile=
 #SlurmSchedLogLevel=
-
-NodeName=ocean[1-4] NodeHostName=localhost NodeAddr=127.0.0.1 CPUs=1 RealMemory=7954
-PartitionName=debug Nodes=ALL Default=YES MaxTime=INFINITE State=UP Shared=FORCE:1
-
-# NodeName=home[1-4] NodeHostName=home NodeAddr=127.0.0.1 CPUs=1 ThreadsPerCore=1 Port=17001
-# PartitionName=debug Nodes=ALL Default=YES MaxTime=INFINITE State=UP Shared=FORCE:1
-#
-# COMPUTE NODES
-# NodeName=instance RealMemory=3928 Sockets=1 CoresPerSocket=2 ThreadsPerCore=1 State=UNKNOWN
-# PartitionName=debug Nodes=instance Shared=FORCE:1 MaxTime=INFINITE State=UP
-
-# PartitionName=debug Nodes=instance[1-2] Default=YES MaxTime=INFINITE State=UP
-# Default=YES MaxTime=INFINITE State=UP Shared=FORCE:1
-
-# NodeName=dummy26[1-100] NodeHostName=achille NodeAddr=127.0.0.1 CPUs=4 RealMemory=6000
-# PartitionName=mira Default=yes Nodes=dummy26[1-100]
-
-# NodeName=instance RealMemory=3928 Sockets=1 CoresPerSocket=2 ThreadsPerCore=1 State=UNKNOWN
-#NodeName=instance[1-2] NodeHostName=localhost RealMemory=3928 Sockets=1 CoresPerSocket=2 ThreadsPerCore=1 #State=UNKNOWN CPUs=1
-# PartitionName=debug Nodes=instance[1-32] Shared=FORCE:1 MaxTime=INFINITE State=UP Default=YES
-
-# # COMPUTE NODES
-# NodeName=home[1-4] NodeHostName=home NodeAddr=127.0.0.1 CPUs=1
-# PartitionName=debug Nodes=home[1-4] Default=YES MaxTime=INFINITE State=UP
-
-# FrontEndName=instance[1-2]
+SlurmUser=alper
+#SrunEpilog=
+#SrunProlog=
+StateSaveLocation=/var/spool/slurmctld
+#SuspendExcNodes=
+#SuspendExcParts=
+#SuspendProgram=
+#SuspendRate=
+#SuspendTime=
+#SuspendTimeout=
+SwitchType=switch/none
+#TaskEpilog=
+#TaskPlugin=task/none
+#TaskProlog=
+# TIMERS
+#TmpFS=/tmp
+#TopologyPlugin=topology/tree
+#TrackWCKey=no
+#TreeWidth=
+#UnkillableStepProgram=
+#UnkillableStepTimeout=60
+#UsePAM=0
+#VSizeFactor=0
+Waittime=0
