--- a/broker/_slurm/confs/slurmdbd.conf
+++ b/broker/_slurm/confs/slurmdbd.conf
@@ -29,4 +29,4 @@ PidFile=/var/run/slurmdbd.pid
 # Database info
 StorageType=accounting_storage/mysql
 StorageUser=alper
-StoragePass=12345
+StoragePass=12345678
