Fix slurm-docker to work as running multiple jobs in parallel.

--- a/docker/slurm/files/slurm.conf
+++ b/docker/slurm/files/slurm.conf
@@ -17,7 +17,6 @@ ClusterName=linux
 #EpilogMsgTime=2000
 #EpilogSlurmctld=
 #FirstJobId=1
-#FrontEndName=slurmctl
 #GetEnvTimeout=2
 #GresTypes=
 #GroupUpdateForce=0
@@ -53,15 +52,12 @@ KillWait=30
 MinJobAge=300
 MpiDefault=none
 #MpiParams=ports=#-#
-NodeName=c1 NodeHostName=slurmctl NodeAddr=127.0.0.1 RealMemory=1000
-NodeName=c2 NodeAddr=127.0.0.1 RealMemory=1000
-NodeName=c3 NodeAddr=127.0.0.1 RealMemory=1000 Gres=gpu:titanxp:1
-NodeName=c4 NodeAddr=127.0.0.1 RealMemory=1000 Gres=gpu:titanxp:1
+NodeName=slurmctl[1-2] NodeHostName=localhost Port=[6001-6002] NodeAddr=127.0.0.1 CPUs=1 RealMemory=1000
+PartitionName=debug Default=yes Nodes=slurmctl[1-2]
 #OverTimeLimit=0
-PartitionName=debug Nodes=c[3-4] Priority=50 DefMemPerCPU=500 Shared=NO MaxNodes=2 MaxTime=5-00:00:00 DefaultTime=5-00:00:00 State=UP
-PartitionName=normal Default=yes Nodes=c[1-2] Priority=50 DefMemPerCPU=500 Shared=NO MaxNodes=2 MaxTime=5-00:00:00 DefaultTime=5-00:00:00 State=UP
-
-# PartitionName=debug Nodes=ALL Default=YES MaxTime=INFINITE State=UP Shared=FORCE:1 MaxNodes=4
+# PartitionName=normal Nodes=ALL Default=YES MaxTime=INFINITE State=UP Shared=FORCE:1
+# PartitionName=debug Nodes=c[3-4] Priority=50 DefMemPerCPU=500 Shared=NO MaxNodes=2 MaxTime=5-00:00:00 DefaultTime=5-00:00:00 State=UP
+# PartitionName=normal Default=yes Nodes=c[1-2] Priority=50 DefMemPerCPU=500 Shared=NO MaxNodes=2 MaxTime=5-00:00:00 DefaultTime=5-00:00:00 State=UP
 # PARTITIONS
 #PluginDir=
 #PlugStackConfig=
@@ -95,19 +91,19 @@ ReturnToService=1
 #SchedulerTimeSlice=30
 SchedulerType=sched/backfill
 # SCHEDULING
+SlurmctldHost=slurmctl
 SelectTypeParameters=CR_CPU_Memory
 SelectType=select/cons_tres
 SlurmctldDebug=debug
-SlurmctldHost=slurmctl
 SlurmctldLogFile=/var/log/slurm/slurmctld.log
 SlurmctldPidFile=/var/run/slurm/slurmctld.pid
 SlurmctldPort=6817
 SlurmctldTimeout=120
 SlurmdDebug=debug
-SlurmdLogFile=/var/log/slurm/slurmd.log
-SlurmdPidFile=/var/run/slurm/slurmd.pid
+SlurmdLogFile=/var/log/slurm/slurmd.%n.log
+SlurmdPidFile=/var/run/slurmd.%n.pid
 SlurmdPort=6818
-SlurmdSpoolDir=/var/spool/slurmd
+SlurmdSpoolDir=/var/spool/slurmd.%n
 SlurmdTimeout=300
 #SlurmdUser=root
 #SlurmSchedLogFile=
