--- a/docker/slurm/files/supervisord.conf
+++ b/docker/slurm/files/supervisord.conf
@@ -43,23 +43,6 @@ autostart=false
 autorestart=false
 priority=2
 
-[program:munged]
-user=munge
-command=/usr/sbin/munged -F
-autostart=false
-autorestart=true
-startsecs=5
-startretries=2
-exitcodes=0,1,2
-stdout_logfile=/var/log/supervisor/munged.log
-stdout_logfile_maxbytes=1MB
-stdout_logfile_backups=5
-stderr_logfile=/var/log/supervisor/munged.log
-stderr_logfile_maxbytes=1MB
-stderr_logfile_backups=5
-priority=1
-loglevel=trace
-
 [program:mysqld]
 command=/usr/bin/pidproxy /var/run/mariadb/mariadb.pid /usr/bin/mysqld_safe
 stdout_logfile=/var/log/supervisor/mysqld.log
@@ -103,17 +86,62 @@ stderr_logfile_maxbytes=1MB
 stderr_logfile_backups=5
 priority=50
 
-[program:slurmd]
+# [program:slurmd]
+# user=root
+# # command=/bin/bash -c "until 2>/dev/null >/dev/tcp/localhost/6817; do echo 'Waiting for port 6817'; sleep 1; done && /usr/sbin/slurmd -Dvvv"
+# command=/usr/sbin/slurmd -Dvvv
+# autostart=false
+# autorestart=false
+# exitcodes=0,1,2
+# stdout_logfile=/var/log/supervisor/slurmd.log
+# stdout_logfile_maxbytes=1MB
+# stdout_logfile_backups=5
+# stderr_logfile=/var/log/supervisor/slurmd.log
+# stderr_logfile_maxbytes=1MB
+# stderr_logfile_backups=5
+# priority=100
+
+[program:slurmd_1]
 user=root
-# command=/bin/bash -c "until 2>/dev/null >/dev/tcp/localhost/6817; do echo 'Waiting for port 6817'; sleep 1; done && /usr/sbin/slurmd -Dvvv"
-command=/usr/sbin/slurmd -Dvvv
+command=/usr/sbin/slurmd -N slurmctl1 -Dvvv
 autostart=false
 autorestart=false
 exitcodes=0,1,2
-stdout_logfile=/var/log/supervisor/slurmd.log
+stdout_logfile=/var/log/supervisor/slurmd.1.log
 stdout_logfile_maxbytes=1MB
 stdout_logfile_backups=5
-stderr_logfile=/var/log/supervisor/slurmd.log
+stderr_logfile=/var/log/supervisor/slurmd.1.log
 stderr_logfile_maxbytes=1MB
 stderr_logfile_backups=5
 priority=100
+
+[program:slurmd_2]
+user=root
+command=/usr/sbin/slurmd -N slurmctl2 -Dvvv
+autostart=false
+autorestart=false
+exitcodes=0,1,2
+stdout_logfile=/var/log/supervisor/slurmd.2.log
+stdout_logfile_maxbytes=1MB
+stdout_logfile_backups=5
+stderr_logfile=/var/log/supervisor/slurmd.2.log
+stderr_logfile_maxbytes=1MB
+stderr_logfile_backups=5
+priority=100
+
+# [program:munged]
+# user=munge
+# command=/usr/sbin/munged -F
+# autostart=false
+# autorestart=true
+# startsecs=5
+# startretries=2
+# exitcodes=0,1,2
+# stdout_logfile=/var/log/supervisor/munged.log
+# stdout_logfile_maxbytes=1MB
+# stdout_logfile_backups=5
+# stderr_logfile=/var/log/supervisor/munged.log
+# stderr_logfile_maxbytes=1MB
+# stderr_logfile_backups=5
+# priority=1
+# loglevel=trace
