Improve watch scripts.
- Docker add startup script to apply git pull -r -v on ebb.

--- a/docker/slurm/files/slurm.conf
+++ b/docker/slurm/files/slurm.conf
@@ -101,7 +101,7 @@ SlurmdPidFile=/var/run/slurmd.%n.pid
 SlurmdPort=6818
 SlurmdSpoolDir=/var/spool/slurmd.%n
 SlurmdTimeout=300
-#SlurmdUser=root
+SlurmdUser=root
 #SlurmSchedLogFile=
 #SlurmSchedLogLevel=
 SlurmUser=slurm
