--- a/docker/slurm/files/supervisord.conf
+++ b/docker/slurm/files/supervisord.conf
@@ -86,21 +86,6 @@ stderr_logfile_maxbytes=1MB
 stderr_logfile_backups=5
 priority=50
 
-# [program:slurmd]
-# user=root
-# # command=/bin/bash -c "until 2>/dev/null >/dev/tcp/localhost/6817; do echo 'Waiting for port 6817'; sleep 1; done && /usr/sbin/slurmd -Dvvv"
-# command=/usr/sbin/slurmd -Dvvv
-# autostart=false
-# autorestart=false
-# exitcodes=0,1,2
-# stdout_logfile=/var/log/supervisor/slurmd.log
-# stdout_logfile_maxbytes=1MB
-# stdout_logfile_backups=5
-# stderr_logfile=/var/log/supervisor/slurmd.log
-# stderr_logfile_maxbytes=1MB
-# stderr_logfile_backups=5
-# priority=100
-
 [program:slurmd_1]
 user=root
 command=/usr/sbin/slurmd -N slurmctl1 -Dvvv
@@ -129,6 +114,20 @@ stderr_logfile_maxbytes=1MB
 stderr_logfile_backups=5
 priority=100
 
+[program:startup]
+user=root
+command=/workspace/ebloc-broker/docker/slurm/files/startup.sh
+autostart=false
+autorestart=false
+exitcodes=0,1,2
+stdout_logfile=/var/log/supervisor/startup.log
+stdout_logfile_maxbytes=1MB
+stdout_logfile_backups=5
+stderr_logfile=/var/log/supervisor/startup.log
+stderr_logfile_maxbytes=1MB
+stderr_logfile_backups=5
+priority=100
+
 # [program:munged]
 # user=munge
 # command=/usr/sbin/munged -F
@@ -145,3 +144,18 @@ priority=100
 # stderr_logfile_backups=5
 # priority=1
 # loglevel=trace
+
+# [program:slurmd]
+# user=root
+# # command=/bin/bash -c "until 2>/dev/null >/dev/tcp/localhost/6817; do echo 'Waiting for port 6817'; sleep 1; done && /usr/sbin/slurmd -Dvvv"
+# command=/usr/sbin/slurmd -Dvvv
+# autostart=false
+# autorestart=false
+# exitcodes=0,1,2
+# stdout_logfile=/var/log/supervisor/slurmd.log
+# stdout_logfile_maxbytes=1MB
+# stdout_logfile_backups=5
+# stderr_logfile=/var/log/supervisor/slurmd.log
+# stderr_logfile_maxbytes=1MB
+# stderr_logfile_backups=5
+# priority=100
