--- a/docker/slurm/files/supervisord.conf
+++ b/docker/slurm/files/supervisord.conf
@@ -128,6 +128,20 @@ stderr_logfile_maxbytes=1MB
 stderr_logfile_backups=5
 priority=100
 
+[program:ipfs]
+user=root
+command=/usr/local/bin/ipfs daemon --enable-gc --routing=none
+autostart=false
+autorestart=false
+exitcodes=0,1,2
+stdout_logfile=/var/log/supervisor/ipfs.log
+stdout_logfile_maxbytes=1MB
+stdout_logfile_backups=5
+stderr_logfile=/var/log/supervisor/ipfs.log
+stderr_logfile_maxbytes=1MB
+stderr_logfile_backups=5
+priority=50
+
 # [program:munged]
 # user=munge
 # command=/usr/sbin/munged -F
