Fix add account to slurm.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,15 +14,17 @@ exclude = '''
 /(
     \.eggs
   | \.git
+  | \.gitmodules
+  | \.gitattributes
   | \.hg
   | \.mypy_cache
   | \.tox
   | \.venv
   | _build
-  | buck-out
   | build
   | dist
   | env
+  | Pipfile
   | venv
   | docs
   | ebloc_broker.egg-info
