--- a/broker/ipfs/job.yaml
+++ b/broker/ipfs/job.yaml
@@ -1,6 +1,6 @@
 config:
-    requester_address: '0x17b4ec0bcd6a8f386b354becd44b3c4813448184'
-    provider_address: '0x1926b36AF775E1312FDEbCc46303eCAe50d945aF'
+    requester_address: '0xa9fc23943e48a3efd35bbdd440932f123d05b697'
+    provider_address: '0xE2e146d6B456760150d78819af7d276a1223A6d4'
     source_code:
         cache_type: public
         path: ~/test_eblocbroker/test_data/base/source_code
@@ -12,7 +12,9 @@ config:
             path: ~/test_eblocbroker/test_data/base/data/data1
             storage_hours: 1
             storage_id: ipfs
-  # data2:
+        data2:
+            hash: fe801973c5b22ef6861f2ea79dc1eb9c
+  # data3:
   #     cache_type: public
   #     path: ~/test_eblocbroker/dataset_zip/small/KZ2-tsukuba
   #     storage_hours: 1
