--- a/setup.cfg
+++ b/setup.cfg
@@ -19,6 +19,7 @@ context = 19
 [mypy]
 follow_imports = silent
 ignore_missing_imports = True
+disable_error_code = annotation-unchecked
 
 [mypy-web3]
 follow_imports = silent
