--- a/broker/ipfs/job.yaml
+++ b/broker/ipfs/job.yaml
@@ -1,19 +1,19 @@
 config:
-  requester_address: "0xa9fc23943e48a3efd35bbdd440932f123d05b697"
-  provider_address: "0xE2e146d6B456760150d78819af7d276a1223A6d4"
-  source_code:
-    cache_type: public
-    path: ~/test_eblocbroker/test_data/base/source_code
-    storage_hours: 0
-    storage_id: ipfs
-  data:
-    data1:
-      cache_type: public
-      path: ~/test_eblocbroker/test_data/base/data/data1
-      storage_hours: 1
-      storage_id: ipfs
-  data_transfer_out: 2
-  jobs:
-    job1:
-      cores: 1
-      run_time: 1
+    requester_address: '0xa9fc23943e48a3efd35bbdd440932f123d05b697'
+    provider_address: '0xE2e146d6B456760150d78819af7d276a1223A6d4'
+    source_code:
+        cache_type: public
+        path: ~/test_eblocbroker/test_data/base/source_code
+        storage_hours: 0
+        storage_id: ipfs
+    data:
+        data1:
+            cache_type: public
+            path: ~/test_eblocbroker/test_data/base/data/data1
+            storage_hours: 1
+            storage_id: ipfs
+    data_transfer_out: 2
+    jobs:
+        job1:
+            cores: 1
+            run_time: 1
