--- a/requirements.txt
+++ b/requirements.txt
@@ -689,6 +689,7 @@ pyjwt==1.7.1
     #   eth-brownie
     #   pythx
 pylint==2.13.9
+pymultihash==0.8.2
 pymongo==4.1.1
 pymy==0.0.8
 pymysql==0.9.3
