--- a/broker/test_setup/job_cppr.yaml
+++ b/broker/test_setup/job_cppr.yaml
@@ -1,21 +1,21 @@
 config:
-    requester_address: '0xc60409093861fe191ae851572a440deb42818a63'
+    requester_address: '0x02a07535bc88f180ecf9f7c6fd66c0c8941fd7ab'
     provider_address: '0x4934a70ba8c1c3acfa72e809118bdd9048563a24'
     source_code:
-        storage_id: gdrive
+        storage_id: b2drop
         cache_type: public
         path: ~/test_eblocbroker/run_cppr
         storage_hours: 0
     data:
         data1:
-            hash: f71df9d36cd519d80a3302114779741d
-        data2:
             hash: 1bfca57fe54bc46ba948023f754521d6
+        data2:
+            hash: bfc83d9f6d5c3d68ca09499190851e86
         data3:
             cache_type: public
-            path: /home/alper/test_eblocbroker/small/BL06-gargoyle-sml
+            path: /home/alper/test_eblocbroker/small/KZ2-venus
             storage_hours: 1
-            storage_id: gdrive
+            storage_id: b2drop
     data_transfer_out: 5
     jobs:
         job1:
