--- a/broker/test_setup/job_nas.yaml
+++ b/broker/test_setup/job_nas.yaml
@@ -1,8 +1,8 @@
 config:
-    requester_address: '0x92086404471d0e5453f856363358967308b37cd5'
-    provider_address: '0x29e613b04125c16db3f3613563bfdd0ba24cb629'
+    requester_address: '0xfce73328daf1ae024d0a724c595e1d5b2ac8aecb'
+    provider_address: '0x1926b36af775e1312fdebcc46303ecae50d945af'
     source_code:
-        storage_id: gdrive
+        storage_id: ipfs
         cache_type: public
         path: ~/test_eblocbroker/NPB3.3-SER_source_code
         storage_hours: 0
