Fix import bloxberg connection was entering into a loop in import.py

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "orcid-authentication"]
 	path = orcid-authentication
 	url = https://github.com/avatar-lavventura/orcid-authentication
+[submodule "bloxbergBootnodeSetup"]
+	path = bloxbergBootnodeSetup
+	url = https://github.com/avatar-lavventura/bloxbergBootnodeSetup
