--- a/broker/cfg_temp.yaml
+++ b/broker/cfg_temp.yaml
@@ -8,6 +8,7 @@ cfg:
   log_path: ~/.ebloc-broker
   ebloc_path: ~/ebloc-broker
   gdrive: /usr/local/bin/gdrive
+  bloxberg_host: https://core.bloxberg.org # http://alpy-bloxberg.duckdns.org:8545/
   rpc_port: 8545
   provider:
     slurm_user: slurm
