--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,7 @@ argcomplete==2.0.0
 aspy-refactor-imports==2.1.1
     # via
     #   seed-isort-config
-astroid==2.11.5
+astroid==2.15.1
     # via
     #   pylint
 asttokens==2.0.5
@@ -75,7 +75,7 @@ base58==2.1.1
 bcrypt==3.1.7
     # via
     #   paramiko
-beautifulsoup4==4.9.1
+beautifulsoup4==4.12.0
     # via
     #   bs4
     #   webtest
@@ -83,7 +83,7 @@ bitarray==2.6.0
     # via
     #   eth-account
     #   eth-brownie
-black==22.10.0
+black==23.3.0
     # via
     #   eth-brownie
 bleach==4.1.0
@@ -183,7 +183,7 @@ dataclassy==0.11.1
     #   eip712
     #   eth-brownie
 dateparser==1.1.6
-DateTime==5.0
+DateTime==5.1
     # via
     #   accesscontrol
 dbfread==2.0.4
@@ -209,7 +209,7 @@ docopt==0.6.2
 docstring-to-markdown==0.11
     # via
     #   python-lsp-server
-docutils==0.16
+docutils==0.19
     # via
     #   python-daemon
     #   readme-renderer
@@ -300,7 +300,7 @@ flake8==6.0.0
     #   flake8-mypy
     #   flake8-noqa
 flake8-mypy==17.8.0
-flake8-noqa==1.3.0
+flake8-noqa==1.3.1
 flask==2.2.3
     # via
     #   grip
@@ -320,7 +320,7 @@ git-filter-repo==2.33.0
 gitdb==4.0.2
     # via
     #   gitpython
-gitpython==3.1.0
+gitpython==3.1.31
 grip==4.5.2
 gshell==5.5.2
 gunicorn==20.0.4
@@ -380,7 +380,7 @@ iniconfig==1.1.1
     #   eth-brownie
     #   pytest
 install==1.3.5
-ipdb==0.13.11
+ipdb==0.13.13
 ipfshttpclient @ https://github.com/avatar-lavventura/py-ipfs-http-client/archive/refs/heads/master.zip
     # via
     #   eth-brownie
@@ -389,7 +389,7 @@ ipython==8.7.0
     # via
     #   ipdb
 ipython-genutils==0.2.0
-isort==5.10.1
+isort==5.12.0
     # via
     #   pylint
 itsdangerous==2.1.2
@@ -527,7 +527,7 @@ numpy==1.23.5
 oauthlib==3.1.0
     # via
     #   lazr-restfulclient
-packaging==21.3
+packaging==23.0
     # via
     #   bleach
     #   build
@@ -600,7 +600,7 @@ pluggy==1.0.0
     #   python-lsp-server
     #   tox
 ppi==0.0.4
-pre-commit==2.21.0
+pre-commit==3.2.1
 prompt-toolkit==3.0.31
     # via
     #   eth-brownie
@@ -688,7 +688,7 @@ pyjwt==1.7.1
     # via
     #   eth-brownie
     #   pythx
-pylint==2.13.9
+pylint==2.17.1
 pymultihash==0.8.2
 pymongo==4.3.3
 pymy==0.0.8
@@ -757,7 +757,7 @@ python-language-server==0.36.2
 python-lsp-jsonrpc==1.0.0
     # via
     #   python-lsp-server
-python-lsp-server==1.6.0
+python-lsp-server==1.7.1
 python-slugify==1.2.6
 pythx==1.6.1
     # via
@@ -806,14 +806,14 @@ restrictedpython==5.0
     # via
     #   accesscontrol
 rfc3986==1.4.0
-rich==13.3.2
+rich==13.3.3
 rlp==2.0.1
     # via
     #   eth-account
     #   eth-brownie
     #   eth-rlp
 roman==3.3
-ruamel-yaml==0.17.20
+ruamel.yaml==0.17.21
 ruamel-yaml-clib==0.2.6
     # via
     #   ruamel-yaml
@@ -897,7 +897,7 @@ sortedcontainers==2.4.0
 soupsieve==2.2.1
     # via
     #   beautifulsoup4
-sphinx==4.3.1
+sphinx==6.1.3
     # via
     #   sphinx-autobuild
     #   sphinx-rtd-theme
