--- a/broker/test_setup/job_nas.yaml
+++ b/broker/test_setup/job_nas.yaml
@@ -1,8 +1,8 @@
 config:
-  requester_address: '0x2c73a80956516ba9e6005030faed2f8212bc10a3'
-  provider_address: '0x1926b36af775e1312fdebcc46303ecae50d945af'
+  requester_address: '0x72c1a89ff3606aa29686ba8d29e28dccff06430a'
+  provider_address: '0x4934a70ba8c1c3acfa72e809118bdd9048563a24'
   source_code:
-    storage_id: ipfs_gpg
+    storage_id: b2drop
     cache_type: public
     path: ~/test_eblocbroker/NPB3.3-SER_source_code
     storage_hours: 0
