--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@
 #    pip-compile --resolver=backtracking
 #
 pyobjc-framework-Cocoa ; sys_platform == "darwin"
-accesscontrol==4.2
+AccessControl==6.0
 acquisition==4.6
     # via
     #   accesscontrol
@@ -362,7 +362,7 @@ imagesize==1.3.0
     # via
     #   sphinx
 importchecker==2.0
-importlib-metadata==4.2.0
+importlib-metadata==6.3.0
     # via
     #   flask
 importlib-resources==5.1.2
@@ -461,8 +461,6 @@ markupsafe==2.0.1
     #   mako
     #   wtforms
 matplotlib==3.5.0
-    # via
-    #   slip
 matplotlib-inline==0.1.3
     # via
     #   ipython
@@ -513,8 +511,6 @@ netaddr==0.8.0
 netifaces==0.10.4
 networkx==2.6.3
 neurotools==0.3.1
-    # via
-    #   slip
 ng==1.2.0
 nodeenv==1.6.0
     # via
@@ -527,16 +523,6 @@ numpy==1.23.5
 oauthlib==3.1.0
     # via
     #   lazr-restfulclient
-packaging==23.0
-    # via
-    #   bleach
-    #   build
-    #   eth-brownie
-    #   matplotlib
-    #   pytest
-    #   setuptools-scm
-    #   sphinx
-    #   tox
 paramiko==2.7.1
     # via
     #   sshtunnel
@@ -548,6 +534,7 @@ parso==0.7.1
     # via
     #   jedi
 pastedeploy==2.1.0
+packaging==23.1
 path-and-address==2.0.1
     # via
     #   grip
@@ -582,7 +569,7 @@ pillow==8.0.1
     #   imageio
     #   matplotlib
     #   reportlab
-pip-tools==6.12.3
+pip-tools==6.13.0
 pipenv==2020.11.15
 pipupgrade==1.10.1
 pkginfo==1.5.0.1
@@ -757,7 +744,7 @@ python-language-server==0.36.2
 python-lsp-jsonrpc==1.0.0
     # via
     #   python-lsp-server
-python-lsp-server==1.7.1
+python-lsp-server==1.7.2
 python-slugify==1.2.6
 pythx==1.6.1
     # via
@@ -802,11 +789,11 @@ requests[socks]==2.28.1
     #   webdriver-manager
 requests-toolbelt==0.9.1
 requests-unixsocket==0.2.0
-restrictedpython==5.0
+RestrictedPython==6.0
     # via
     #   accesscontrol
 rfc3986==1.4.0
-rich==13.3.3
+rich==13.3.4
 rlp==2.0.1
     # via
     #   eth-account
@@ -814,7 +801,7 @@ rlp==2.0.1
     #   eth-rlp
 roman==3.3
 ruamel.yaml==0.17.21
-ruamel-yaml-clib==0.2.6
+ruamel-yaml-clib==0.2.7
     # via
     #   ruamel-yaml
 secretstorage==3.3.1
@@ -882,7 +869,6 @@ six==1.16.0
     #   zope-publisher
     #   zope-tales
     #   zope-traversing
-slip==0.3.8
 smmap==3.0.1
     # via
     #   gitdb
