Fix Dockerfile to make it work again
- Merge branch 'feature/0' into dev

--- a/docker/provider/supervisord.conf
+++ b/docker/provider/supervisord.conf
@@ -130,7 +130,7 @@ priority=100
 
 [program:ipfs]
 user=root
-command=/usr/local/bin/ipfs daemon --enable-gc --routing=none
+command=/usr/local/bin/ipfs daemon --migrate --enable-gc --routing=none
 autostart=false
 autorestart=false
 exitcodes=0,1,2
