--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,6 @@
+[bumpversion]
+current_version = 2.2.1
+
 [flake8]
 exclude = .old_work/*,docs/*,broker/_utils/colorer.py,webapp/ex.py
 max-line-length = 120
