--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,15 +10,17 @@ repos:
       - id: seed-isort-config
 
   - repo: https://github.com/pre-commit/mirrors-isort
-    rev: v4.3.21
+    rev: v5.10.1
     hooks:
       - id: isort
+        exclude: "docs/.*"
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v0.782
     hooks:
       - id: mypy
-        verbose: true
+        exclude: "docs/.*"
+        # verbose: true
         entry: bash -c 'mypy "$@" || true' --
 
   - repo: https://github.com/psf/black
@@ -26,11 +28,11 @@ repos:
     hooks:
       - id: black
         name: black
-        exclude: ".depreciated/.*|.old_work/.*"
+        exclude: ".depreciated/.*|.old_work/.*|docs/.*"
         # exclude: ^.depreciated/
 
-  - repo: https://gitlab.com/pycqa/flake8
-    rev: 3.8.3
+  - repo: https://github.com/PyCQA/flake8
+    rev: 6.0.0
     hooks:
       - id: flake8
         exclude: ".depreciated/.*|.old_work/.*"
