--- a/broker/test_setup/job_nas.yaml
+++ b/broker/test_setup/job_nas.yaml
@@ -1,8 +1,8 @@
 config:
-  requester_address: '0x92086404471d0e5453f856363358967308b37cd5'
-  provider_address: '0x1926b36af775e1312fdebcc46303ecae50d945af'
+  requester_address: '0x5affc0638b7b311be40a0e27ed5cd7c133c16e64'
+  provider_address: '0x4934a70ba8c1c3acfa72e809118bdd9048563a24'
   source_code:
-    storage_id: ipfs
+    storage_id: gdrive
     cache_type: public
     path: ~/test_eblocbroker/NPB3.3-SER_source_code
     storage_hours: 0
