--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,3 @@
-[bumpversion]
-current_version = 2.2.1
-
 [flake8]
 exclude = .old_work/*,docs/*,broker/_utils/colorer.py,webapp/ex.py
 max-line-length = 120
@@ -20,9 +17,10 @@ use_parentheses = True
 context = 19
 
 [mypy]
+exclude = docs/solidity_lexer.py
 follow_imports = silent
 ignore_missing_imports = True
-disable_error_code = annotation-unchecked
+# disable_error_code = annotation-unchecked
 
 [mypy-web3]
 follow_imports = silent
