Fix missing price in cost calculation
- Fetch LogDataStorageRequest event info

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,9 +20,9 @@ use_parentheses = True
 context = 19
 
 [mypy]
+exclude = docs/solidity_lexer.py
 follow_imports = silent
 ignore_missing_imports = True
-disable_error_code = annotation-unchecked
 
 [mypy-web3]
 follow_imports = silent
