Improve Slurm usage doc and itself

--- a/broker/_slurm/confs/slurm.conf
+++ b/broker/_slurm/confs/slurm.conf
@@ -55,9 +55,6 @@ MpiDefault=none
 #MpiParams=ports=#-#
 # NodeName=home NodeHostName=localhost CPUs=80 Sockets=2 CoresPerSocket=20 ThreadsPerCore=2 RealMemory=515896 State=UNKNOWN
 #
-NodeName=homevm[1-4] NodeHostName=localhost Port=[6001-6004] NodeAddr=127.0.0.1 CPUs=1 RealMemory=6000
-PartitionName=debug Default=yes Nodes=homevm[1-4]
-
 # NodeName=home[1-2] NodeHostName=localhost NodeAddr=127.0.0.1 RealMemory=1000 CPUs=1
 # PartitionName=debug Nodes=ALL Default=YES MaxTime=INFINITE State=UP MaxNodes=4
 
@@ -80,7 +77,7 @@ PartitionName=debug Default=yes Nodes=homevm[1-4]
 #PriorityFavorSmall=
 #PriorityFlags=
 #PriorityMaxAge=
-#PriorityType=priority/basic
+PriorityType=priority/multifactor
 #PriorityUsageResetPeriod=
 #PriorityWeightAge=
 #PriorityWeightFairshare=
@@ -107,7 +104,7 @@ SchedulerType=sched/backfill
 SelectTypeParameters=CR_CPU_Memory
 SelectType=select/cons_tres
 SlurmctldDebug=debug
-SlurmctldHost=homevm
+SlurmctldHost=leopar
 SlurmctldLogFile=/var/log/slurm/slurmctld.log
 SlurmctldPidFile=/var/run/slurm/slurmctld.pid
 SlurmctldPort=6817
@@ -145,3 +142,27 @@ SwitchType=switch/none
 #UsePAM=0
 #VSizeFactor=0
 Waittime=0
+
+# slurmd -C ... RealMemory dogru girilimeli
+# multiple core --------------------------------------------------------------------------------------
+NodeName=leopar[1-4] NodeHostName=localhost Port=[6001-6004] NodeAddr=127.0.0.1 CPUs=1 RealMemory=1982
+PartitionName=debug Default=yes Nodes=leopar[1-4]
+# --------------------------------------------------------------------------------------------------
+
+# single core --------------------------------------------------------------------------------------
+# NodeName=leopar CPUs=1 Boards=1 SocketsPerBoard=1 CoresPerSocket=1 ThreadsPerCore=1 RealMemory=976
+# PartitionName=debug Default=yes Nodes=leopar
+# --------------------------------------------------------------------------------------------------
+
+
+# below old
+# NodeName=leopar CPUs=1 Boards=1 SocketsPerBoard=1 CoresPerSocket=1 ThreadsPerCore=1 RealMemory=976
+
+# NodeName=leopar CPUs=4 Boards=1 SocketsPerBoard=2 CoresPerSocket=2 ThreadsPerCore=1 RealMemory=1982 NodeHostName=localhost
+# PartitionName=debug Default=yes Nodes=leopar
+
+# NodeName=leopar CPUs=1 Boards=1 SocketsPerBoard=1 CoresPerSocket=1 ThreadsPerCore=1 RealMemory=976
+# PartitionName=debug Default=yes
+
+# NodeName=leopar NodeHostName=localhost CPUs=1 Sockets=2 CoresPerSocket=20 ThreadsPerCore=1 RealMemory=515896 State=UNKNOWN
+# PartitionName=debug Default=yes
