--- a/broker/test_setup/job_nas.yaml
+++ b/broker/test_setup/job_nas.yaml
@@ -1,8 +1,8 @@
 config:
-  requester_address: '0xdce54cfd06e7ccf5f2e7640e0007ba667190e38e'
+  requester_address: '0xcaa482f269dd0926fdfd5c48e3a22b621f9d1a09'
   provider_address: '0x1926b36af775e1312fdebcc46303ecae50d945af'
   source_code:
-    storage_id: b2drop
+    storage_id: gdrive
     cache_type: public
     path: ~/test_eblocbroker/NPB3.3-SER_source_code
     storage_hours: 0
